@@ -29,6 +29,9 @@ Zope Changes
        enforce this behaviour inside the ZPublisher. See also 
        doc/ENVIRONMENT.txt to check with the DATETIME_FORMAT 
  
+     - KeywordIndex and  FieldIndex are now capable to index more
+       than one attribute of an object. This removes the ties between the
+       indexes ID and the attribute name to be indexed. 
 
     Bugs Fixed
 
